# KLERK

./: .env.example  .gitignore  README.md  pyproject.toml
.data/: memory.sqlite
build_vector_db/: build_vector_db.py
eval/: README.md  dataset.py  metrics.py  report.py  run_klerk_eval.py  run_mcp_baseline.py
src/: __init__.py  answering.py  app.py  mcp_client.py  parsers.py  router.py  service.py
src/.data/: checkpoints.sqlite  memory.sqlite
src/.data/chroma/: chroma.sqlite3
src/data_structure/: schemas.py
src/graphs/: main_graph.py  state.py
src/graphs/subgraphs/: legal_rag_subgraph.py  memory_subgraph.py
src/llm_model/: llm.py
src/storages/: memory_store.py  vector_store.py
src/ui/: gradio_app.py
src/utils/: citations.py  config.py  exceptions.py  logging_utils.py
src/vector_db_spec/: legal_specs.py
tests/: test_citations.py  test_config_vllm.py  test_eval_dataset.py  test_memory_scoring.py  test_metrics_availability.py  test_parsers.py  test_precedent_ingestion.py  test_recovery_trace.py  test_router.py
