[project]
name = "legal-memory-agent"
version = "0.1.0"
description = "LangGraph-based Korean legal RAG agent with memory, MCP fallback, Chroma cache, and Gradio UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bert-score>=0.3.13",
  "chromadb>=1.0.0",
  "gradio>=5.0.0",
  "langchain>=1.0.0",
  "langchain-chroma>=1.0.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.0.0",
  "langchain-huggingface>=1.2.1",
  "langchain-mcp-adapters>=0.1.0",
  "langchain-ollama>=1.0.0",
  "langchain-openai>=1.0.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "orjson>=3.10.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.0.0",
  "pypdf>=6.10.0",
  "python-dotenv>=1.0.0",
  "sentence-transformers>=5.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_memory_agent"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
